--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="certificate-item">
                 <img src="c:\Users\USER\AppData\Local\Microsoft\Windows\INetCache\IE\S01XOV7N\IMG-20241205-WA0061[1].jpg" alt="Certificate 3">
-                <p>Certificate Poster/p>
+                <p>Certificate Poster</p>
             </div>
         </div>
     </section>
